# hubit-tracker

./: .env  .env.example  .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: settings.py  urls.py
habit_tracker/: .coverage  db.sqlite3  pyproject.toml  requirements.txt
habit_tracker/config/: settings.py
habit_tracker/habits/: models.py  permissions.py  serializers.py  urls.py  views.py
habit_tracker/habits/management/commands/: bot.py  set_chat_id.py
habit_tracker/habits/migrations/: 0001_initial.py  0002_profile.py
habit_tracker/habits/tests/: test_models.py  test_views.py
habits/: models.py  tasks.py  urls.py  views.py
habits/tests/: test_permissions.py  test_serializers.py  test_tasks.py
nginx/: default.conf
nginx/nginx/: default.conf
