[project]
name = "hubit-tracker"
version = "0.1.0"
description = "Habit Tracker - бэкенд для трекера полезных привычек"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.0",
    "djangorestframework>=3.16.0",
    "django-cors-headers>=4.7.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.1.0",
    "celery>=5.6.0",
    "redis>=7.4.0",
    "requests>=2.32.0",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "djangorestframework-simplejwt>=5.4.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"
flake8 = "^7.3.0"
isort = "^6.0.0"

[tool.flake8]
max-line-length = 120
exclude = ["migrations", ".venv", "__pycache__"]
extend-ignore = ["W391", "E302"]
